--- a/infrastructure.yml
+++ b/infrastructure.yml
@@ -1,10 +1,8 @@
 cookbooks:
 - annoyances:
-# - java:
-# - ark:
-- rubygems:
-- build-essential:
 - ntp:
+- build-essential:
+- ruby:
 - showoff:
 - fundamentals:
 
@@ -15,7 +13,7 @@ roles:
 nodes:
 - ec2 1:
   - recipe[annoyances],role[base],role[fundamentals]
-  - -S mray -i ~/.ssh/mray.pem -x ubuntu -I ami-0fac7566 -f m1.small -d chef-full
+  - -S mray -i ~/.ssh/mray.pem -x ubuntu -I ami-e8815b81 -f m1.small -d chef-full
 
 # - rackspace 1:
 #   - role[base],role[fundamentals]
